Force z-order for map to prevent components winding up behind it

--- a/web/css/dynmap_style.css
+++ b/web/css/dynmap_style.css
@@ -63,12 +63,13 @@
     width: 100%;
     height: 100%;
     background: #000;
+    z-index: 0;
 }
 
 /* Map Controls */
 .gmnoprint{
     margin-top:-75px;
-    margin-left:-20px
+    margin-left:-20px;
 }
 
 
